[gd_scene load_steps=65 format=2]

[ext_resource path="res://Assets/Characters/Sofa/MainSprite/SofaSpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Project/Characters/Player/States/Jump.gd" type="Script" id=2]
[ext_resource path="res://Project/Characters/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Project/Characters/Player/StateMachine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Project/Characters/Player/States/Idle.gd" type="Script" id=5]
[ext_resource path="res://Project/Characters/Player/States/Run.gd" type="Script" id=6]
[ext_resource path="res://Project/Characters/Player/States/Jump_grup.gd" type="Script" id=7]
[ext_resource path="res://Project/Characters/Player/States/Jump_top.gd" type="Script" id=8]
[ext_resource path="res://Project/Characters/Player/States/Jump_fall.gd" type="Script" id=9]
[ext_resource path="res://Project/Characters/Player/States/Jump_glide.gd" type="Script" id=10]
[ext_resource path="res://Project/Characters/Player/StateMachine/Climb.gd" type="Script" id=11]
[ext_resource path="res://Project/Characters/Player/StateMachine/Attack.gd" type="Script" id=12]
[ext_resource path="res://Project/Characters/Player/StateMachine/Door_enter_in.gd" type="Script" id=13]
[ext_resource path="res://Project/Characters/Player/StateMachine/Door_enter_out.gd" type="Script" id=14]
[ext_resource path="res://Assets/Audio/SFX/Kenny/Impact_sounds/footstep_grass/footstep_grass_003.ogg" type="AudioStream" id=15]
[ext_resource path="res://Assets/Audio/SFX/Kenny/Impact_sounds/footstep_grass/footstep_grass_002.ogg" type="AudioStream" id=16]
[ext_resource path="res://Project/Utils/Audio/RandomAudioStreamPlayer/RandomAudioStreamPlayer.tscn" type="PackedScene" id=17]
[ext_resource path="res://Assets/Audio/SFX/Kenny/Impact_sounds/footstep_grass/footstep_grass_001.ogg" type="AudioStream" id=18]
[ext_resource path="res://Assets/Audio/SFX/Kenny/Impact_sounds/footstep_grass/footstep_grass_000.ogg" type="AudioStream" id=19]
[ext_resource path="res://Assets/Audio/SFX/Kenny/Impact_sounds/footstep_grass/footstep_grass_004.ogg" type="AudioStream" id=20]
[ext_resource path="res://Assets/Audio/SFX/Kenny/Impact_sounds/footstep_concrete/footstep_concrete_003.ogg" type="AudioStream" id=21]
[ext_resource path="res://Assets/Audio/SFX/Kenny/Impact_sounds/footstep_concrete/footstep_concrete_001.ogg" type="AudioStream" id=22]
[ext_resource path="res://Assets/Audio/SFX/Kenny/Impact_sounds/footstep_concrete/footstep_concrete_004.ogg" type="AudioStream" id=23]
[ext_resource path="res://Assets/Audio/SFX/Kenny/Impact_sounds/footstep_concrete/footstep_concrete_002.ogg" type="AudioStream" id=24]
[ext_resource path="res://Assets/Audio/SFX/Kenny/Impact_sounds/footstep_concrete/footstep_concrete_000.ogg" type="AudioStream" id=25]
[ext_resource path="res://Assets/Audio/SFX/General/pop/water_drop.mp3" type="AudioStream" id=26]
[ext_resource path="res://Assets/Audio/SFX/General/swoosh/cartoony whooshes/whoosh_9.wav" type="AudioStream" id=27]
[ext_resource path="res://Assets/Audio/SFX/General/swoosh/cartoony whooshes/whoosh_1.wav" type="AudioStream" id=28]
[ext_resource path="res://Assets/Audio/SFX/General/swoosh/cartoony whooshes/whoosh_5.wav" type="AudioStream" id=29]
[ext_resource path="res://Assets/Audio/SFX/General/swoosh/cartoony whooshes/whoosh_2.wav" type="AudioStream" id=30]
[ext_resource path="res://Assets/Audio/SFX/General/swoosh/cartoony whooshes/whoosh_8.wav" type="AudioStream" id=31]
[ext_resource path="res://Assets/Audio/SFX/General/swoosh/cartoony whooshes/whoosh_7.wav" type="AudioStream" id=32]
[ext_resource path="res://Assets/Audio/SFX/General/swoosh/cartoony whooshes/whoosh_6.wav" type="AudioStream" id=33]
[ext_resource path="res://Assets/Audio/SFX/General/swoosh/cartoony whooshes/whoosh_4.wav" type="AudioStream" id=34]
[ext_resource path="res://Assets/Audio/SFX/General/swoosh/cartoony whooshes/whoosh_3.wav" type="AudioStream" id=35]
[ext_resource path="res://Assets/Audio/SFX/General/swoosh/clean-fast-swooshaiff.mp3" type="AudioStream" id=36]
[ext_resource path="res://Assets/Audio/SFX/General/Punch/Punch/punch_6.mp3" type="AudioStream" id=37]
[ext_resource path="res://Assets/Audio/SFX/General/Punch/Punch/punch_7.mp3" type="AudioStream" id=38]
[ext_resource path="res://Assets/Audio/SFX/General/Punch/Punch/punch_2.mp3" type="AudioStream" id=39]
[ext_resource path="res://Assets/Audio/SFX/General/Punch/Punch/punch_3.mp3" type="AudioStream" id=40]
[ext_resource path="res://Assets/Audio/SFX/General/Punch/Punch/punch_1.mp3" type="AudioStream" id=41]
[ext_resource path="res://Assets/Audio/SFX/General/Punch/Punch/punch_4.mp3" type="AudioStream" id=42]
[ext_resource path="res://Assets/Audio/SFX/General/Punch/Punch/punch_5.mp3" type="AudioStream" id=43]
[ext_resource path="res://Assets/Audio/SFX/General/Punch/Punch/punch_8.mp3" type="AudioStream" id=44]
[ext_resource path="res://Project/Utils/Audio/RandomAudioStreamPlayerNodes/PaffRandomAudioStreamPlayer.tscn" type="PackedScene" id=45]

[sub_resource type="Animation" id=16]
resource_name = "Attack"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 39, 40, 41, 42, 43, 44 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "activate_attack_area"
}, {
"args": [  ],
"method": "disable_attack_area"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Audio/HitRandomAudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=20]
resource_name = "Door_entering"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 228, 229, 230, 231, 232, 233, 234, 235, 236, 237 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Audio/FootstepAudioPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "play"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("StateMachine/Door_enter_in")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_animation_finished"
} ]
}

[sub_resource type="Animation" id=21]
resource_name = "Door_entering_out"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 247, 248, 249, 250, 251, 252, 253, 254, 255 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Audio/FootstepAudioPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "play"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("StateMachine/Door_enter_out")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_animation_finished"
} ]
}

[sub_resource type="Animation" id=14]
resource_name = "Glide_start"
length = 0.3
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.172941 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 171, 172, 173 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Audio/FlightAudioPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0507596, 0.17222 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12, 13, 14, 15, 16, 17, 18 ]
}

[sub_resource type="Animation" id=19]
resource_name = "Item_pickup"
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 190, 191, 192 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Jump_fall"
length = 0.35
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 114, 115 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Jump_glide"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 76, 77, 78, 79 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Audio/FlightAudioPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "Jump_simple"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Audio/JumpAudioPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop"
}, {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "Jump_top"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 133 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Ladder_climb"
length = 0.76
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 153, 154, 155, 156, 157 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Audio/FootstepAudioPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "Land"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 95, 96 ]
}

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 57, 58, 59, 60, 61, 62 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawnFootstepParticles"
}, {
"args": [  ],
"method": "spawnFootstepParticles"
} ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 8 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 4, 8 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 8.5, 5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 8, 3 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 2.5, 8 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 131
collision_mask = 108
script = ExtResource( 3 )

[node name="Audio" type="Node2D" parent="."]
pause_mode = 2

[node name="FootstepAudioPlayer" parent="Audio" instance=ExtResource( 17 )]
numberToPlay = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audio/FootstepAudioPlayer"]
stream = ExtResource( 19 )
volume_db = 5.0
bus = "Footsteps"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Audio/FootstepAudioPlayer"]
stream = ExtResource( 18 )
volume_db = 5.0
bus = "Footsteps"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="Audio/FootstepAudioPlayer"]
stream = ExtResource( 16 )
volume_db = 5.0
bus = "Footsteps"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="Audio/FootstepAudioPlayer"]
stream = ExtResource( 15 )
volume_db = 5.0
bus = "Footsteps"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="Audio/FootstepAudioPlayer"]
stream = ExtResource( 20 )
volume_db = 5.0
bus = "Footsteps"

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="Audio/FootstepAudioPlayer"]
stream = ExtResource( 25 )
volume_db = 5.0
bus = "Footsteps"

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="Audio/FootstepAudioPlayer"]
stream = ExtResource( 22 )
volume_db = 5.0
bus = "Footsteps"

[node name="AudioStreamPlayer8" type="AudioStreamPlayer" parent="Audio/FootstepAudioPlayer"]
stream = ExtResource( 24 )
volume_db = 5.0
bus = "Footsteps"

[node name="AudioStreamPlayer9" type="AudioStreamPlayer" parent="Audio/FootstepAudioPlayer"]
stream = ExtResource( 21 )
volume_db = 5.0
bus = "Footsteps"

[node name="AudioStreamPlayer10" type="AudioStreamPlayer" parent="Audio/FootstepAudioPlayer"]
stream = ExtResource( 23 )
volume_db = 5.0
bus = "Footsteps"

[node name="JumpAudioPlayer" parent="Audio" instance=ExtResource( 17 )]
numberToPlay = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audio/JumpAudioPlayer"]
stream = ExtResource( 26 )
volume_db = 10.0
bus = "SFX"

[node name="FlightAudioPlayer" parent="Audio" instance=ExtResource( 17 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audio/FlightAudioPlayer"]
stream = ExtResource( 28 )
bus = "SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Audio/FlightAudioPlayer"]
stream = ExtResource( 30 )
bus = "SFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="Audio/FlightAudioPlayer"]
stream = ExtResource( 35 )
bus = "SFX"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="Audio/FlightAudioPlayer"]
stream = ExtResource( 34 )
bus = "SFX"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="Audio/FlightAudioPlayer"]
stream = ExtResource( 29 )
bus = "SFX"

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="Audio/FlightAudioPlayer"]
stream = ExtResource( 33 )
bus = "SFX"

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="Audio/FlightAudioPlayer"]
stream = ExtResource( 32 )
bus = "SFX"

[node name="AudioStreamPlayer8" type="AudioStreamPlayer" parent="Audio/FlightAudioPlayer"]
stream = ExtResource( 31 )
bus = "SFX"

[node name="AudioStreamPlayer9" type="AudioStreamPlayer" parent="Audio/FlightAudioPlayer"]
stream = ExtResource( 27 )
bus = "SFX"

[node name="HitRandomAudioStreamPlayer" parent="Audio" instance=ExtResource( 17 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audio/HitRandomAudioStreamPlayer"]
stream = ExtResource( 36 )
bus = "SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Audio/HitRandomAudioStreamPlayer"]
stream = ExtResource( 27 )
volume_db = 5.0
bus = "SFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="Audio/HitRandomAudioStreamPlayer"]
stream = ExtResource( 31 )
volume_db = 5.0
bus = "SFX"

[node name="PunchRandomAudioStreamPlayer" parent="Audio" instance=ExtResource( 17 )]
numberToPlay = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audio/PunchRandomAudioStreamPlayer"]
stream = ExtResource( 41 )
bus = "SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Audio/PunchRandomAudioStreamPlayer"]
stream = ExtResource( 39 )
bus = "SFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="Audio/PunchRandomAudioStreamPlayer"]
stream = ExtResource( 40 )
bus = "SFX"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="Audio/PunchRandomAudioStreamPlayer"]
stream = ExtResource( 42 )
bus = "SFX"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="Audio/PunchRandomAudioStreamPlayer"]
stream = ExtResource( 43 )
bus = "SFX"

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="Audio/PunchRandomAudioStreamPlayer"]
stream = ExtResource( 37 )
bus = "SFX"

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="Audio/PunchRandomAudioStreamPlayer"]
stream = ExtResource( 38 )
bus = "SFX"

[node name="AudioStreamPlayer8" type="AudioStreamPlayer" parent="Audio/PunchRandomAudioStreamPlayer"]
stream = ExtResource( 44 )
bus = "SFX"

[node name="PaffRandomAudioStreamPlayer" parent="Audio" instance=ExtResource( 45 )]

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 16 )
anims/Door_entering = SubResource( 20 )
anims/Door_entering_out = SubResource( 21 )
anims/Glide_start = SubResource( 14 )
anims/Idle = SubResource( 2 )
anims/Item_pickup = SubResource( 19 )
anims/Jump_fall = SubResource( 10 )
anims/Jump_glide = SubResource( 7 )
anims/Jump_simple = SubResource( 8 )
anims/Jump_top = SubResource( 11 )
anims/Ladder_climb = SubResource( 13 )
anims/Land = SubResource( 9 )
anims/RESET = SubResource( 3 )
anims/Run = SubResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Jump_grup" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Jump_top" type="Node" parent="StateMachine/Jump_grup"]
script = ExtResource( 8 )

[node name="Jump" type="Node" parent="StateMachine/Jump_grup"]
script = ExtResource( 2 )

[node name="Jump_fall" type="Node" parent="StateMachine/Jump_grup"]
script = ExtResource( 9 )

[node name="Jump_glide" type="Node" parent="StateMachine/Jump_grup"]
script = ExtResource( 10 )

[node name="Climb" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Door_enter_in" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="Door_enter_out" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="BodyCollisionShape" type="CollisionShape2D" parent="." groups=["player"]]
visible = false
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
position = Vector2( 8, -16 )
texture = ExtResource( 1 )
hframes = 19
vframes = 14
frame = 237

[node name="GroundRay1" type="RayCast2D" parent="Body"]
visible = false
position = Vector2( -4, 1 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 3

[node name="GroundRay2" type="RayCast2D" parent="Body"]
visible = false
position = Vector2( 0, 1 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 3

[node name="GroundRay3" type="RayCast2D" parent="Body"]
visible = false
position = Vector2( 4, 1 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 3

[node name="HazardArea" type="Area2D" parent="Body"]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/HazardArea"]
visible = false
position = Vector2( 0, -8 )
shape = SubResource( 12 )

[node name="AttackArea" type="Area2D" parent="Body"]
visible = false
position = Vector2( 16, -10 )
collision_layer = 0
collision_mask = 144

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/AttackArea"]
position = Vector2( -0.5, 1 )
shape = SubResource( 17 )
disabled = true

[node name="Glider" type="Area2D" parent="Body"]
visible = false
collision_layer = 72
collision_mask = 72

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Glider"]
position = Vector2( 0, -21 )
shape = SubResource( 15 )

[node name="ClimbArea" type="Area2D" parent="Body"]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/ClimbArea"]
position = Vector2( 0.5, -5 )
shape = SubResource( 18 )
